TestSuite/errors/err0305.pas
type A = class
  procedure p1(i: real; Self: integer); 
  begin
  end;
end;

begin 

end.